# rtzr-stt-cli

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
data/: manifest.example.csv
docs/: api-contract.md  code-overview.md  evaluation.md
src/rtzr_stt/: __init__.py  __main__.py  api.py  cli.py  config.py  evaluation.py  formatters.py  io.py  metrics.py
tests/: test_api.py  test_config.py  test_evaluation_and_cli.py  test_io.py  test_metrics_and_formatters.py
