[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtzr-stt-cli"
version = "0.1.0"
description = "Reproducible CLI for RTZR batch speech transcription and CER evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jiwer>=4.0,<5",
    "python-dotenv>=1.0,<2",
    "requests>=2.32,<3",
]

[project.scripts]
rtzr-stt = "rtzr_stt.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "responses>=0.25,<1",
    "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rtzr_stt"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
